[gd_scene load_steps=3 format=3 uid="uid://b75t8o6f5lvww"]

[ext_resource type="Texture2D" uid="uid://cp0srkihaumuc" path="res://Assets/gridSlotWhite.png" id="1_qlncq"]
[ext_resource type="Script" path="res://slot.gd" id="2_7b8v5"]

[node name="Slot" type="TextureRect"]
custom_minimum_size = Vector2(64, 64)
texture = ExtResource("1_qlncq")
expand_mode = 1
script = ExtResource("2_7b8v5")

[node name="StatusFilter" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.2)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
